@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-14T08:24:15Z",
+  "timestamp" : "2023-07-16T16:24:12Z",
   "count_outdated" : 195,
   "uniques_outdated" : 137,
-  "count" : 202,
-  "uniques" : 142,
+  "count" : 203,
+  "uniques" : 143,
   "clones" : [
     {
       "timestamp": "2023-07-02T00:00:00Z",
@@ -34,6 +34,15 @@
     },
     {
       "timestamp": "2023-07-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-16T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
