@@ -1,5 +1,5 @@
 {
-  "count": 7,
+  "count": 8,
   "uniques": 5,
   "clones": [
     {
@@ -19,6 +19,11 @@
     },
     {
       "timestamp": "2023-07-10T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-16T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
