@@ -1,3 +1,12 @@
+2023-07-16T16:24:12Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5568669472 # 1029
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-16
+* notice: last 14d: unq all: 5 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 137 195 / 142 202
+* notice: next accum: outdated-unq outdated-all / unq all: 137 195 / 143 203
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-07-16]
+
 2023-07-14T08:24:15Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5552069004 # 1022
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-14
